previous problem solved

--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 </head>
 
 <body>
-    <div class="container">
-        <form id='form'>
-            <input type="text" name="text" id="text" placeholder="Enter valid username" autocomplete="off">
+    <div class="reload">
+        <button class="btn">Reload Page</button>
+    </div>
+    <div class="beforemain ">
+        <div class="heading">Please Enter the Git hub user name correctly </div>
+        <form  class="form" id="form">
+            <input type="text" class="text" placeholder="User name">
         </form>
-        <h1 class="git">This is git hub profile link</h1>
-        <div class="main">
-
-            <div class="content">
-
-                <div class="projectss">PROJECTS</div>
-
-            </div>
-        </div>
+    </div>
+    <div class="container gate ">
+       
+       <!-- <div class="heading">Projects</div> -->
     </div>
 </body>
 
