loading button completed

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-    <div class="reload">
+    <div class="loading hidden"></div>
+    <!-- <div class="reload">
         <button class="btn">Reload Page</button>
-    </div>
+    </div> -->
     <div class="beforemain ">
         <div class="heading">Please Enter the Git hub user name correctly </div>
         <form  class="form" id="form">
@@ -20,9 +21,9 @@
         </form>
     </div>
     <div class="container gate ">
-       
-       <!-- <div class="heading">Projects</div> -->
     </div>
+    
+
 </body>
 
 </html>
