cover page added

--- a/index.html
+++ b/index.html
@@ -6,24 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git hub profile</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
     <script defer src="index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 </head>
 
 <body>
     <div class="loading hidden"></div>
-    <!-- <div class="reload">
-        <button class="btn">Reload Page</button>
-    </div> -->
     <div class="beforemain ">
         <div class="heading">Please Enter the Git hub user name correctly </div>
-        <form  class="form" id="form">
-            <input type="text" class="text" placeholder="User name">
-        </form>
-    </div>
-    <div class="container gate ">
-    </div>
-    
-
+        <form class="form" id="form"><input type="text" class="text" placeholder="User name"></form></div>
+    <div class="container gate "></div>
+    <div class="cover hide  "></div>
 </body>
 
 </html>
