--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git hub profile</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="button.css">
     <script defer src="index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 </head>
@@ -16,7 +17,8 @@
     <div class="beforemain ">
         <div class="heading">Please Enter the Git hub user name correctly </div>
         <form class="form" id="form"><input type="text" class="text" placeholder="User name"></form></div>
-    <div class="container gate "></div>
+    <div class="container gate ">
+    </div>
     <div class="cover hide  "></div>
 </body>
 
