--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="beforemain ">
         <div class="heading">Please Enter the Git hub user name correctly </div>
         <form class="form" id="form"><input type="text" class="text" placeholder="User name"></form></div>
-    <div class="container gate ">
+    <!-- <div class="container gate "> -->
     </div>
     <div class="cover hide  "></div>
 </body>
